# arctique

./: .gitignore  CITATION.cff  HE.blend  HE.blend1  HE_tile.blend  HE_tile.blend1  HE_tile.py  HE_tile_Vanessa.blend  HE_tile_Vanessa.blend1  README.md  cluster_loop.sh  cluster_render.sh  demo.py  epi_crypts.py  main.py  main_jannik.py  main_macro.py  random_filling.py  render.py  render.sh  render_slurm.sh  render_variation.py  requirements.txt  save_masks_skript.py  scripting_mucosa.blend  scripting_mucosa.blend1  setup.cfg  shading.mtl  surface_filling.py  test.py  train_loop.sh  volume_filling.py
.github/workflows/: ci-unittest.yml
HE_blender_plugin/: README.md  __init__.py
RealDatasets/lizard-challenge/: statistics.ipynb
album_solution/: install_rhender.py  solution.py
docs/: Cite.rst  Contribute.rst  Installation.rst  Methods.rst  README.md  all_sliders.rst  conf.py  index.rst  requirements.txt  usage.rst  whatis.rst
paper/cell_statistics/: statistics.ipynb  visualize_data.ipynb
paper/fig_realism/: fig_realism.ipynb
paper/uq_figures/: main_figure.ipynb
src/: cell_classes.py  scene.py
src/arrangement/: arrangement.py  deformation.py  surface_filling.py  volume_filling.py  voronoi.py
src/data_prep/: README.md  extract_data_subset.py  mask_helpers.py  noisy_data_config.yaml  preprocess_data_and_labels.py  remove_images_by_index.py  sanity_check_functions.py
src/objects/: cells.py  macro_structures.py  tissue.py  (+1 more)
test/: test_integration.py
testing_ideas/: reconstruct_instance_mask_from_single.ipynb  save_3d_masks.py  test_mask_rendering.blend
(+27 files in other folders)
