[metadata]
name = rHEnder
version = 0.1.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Jannik Franzen, Jan Philipp Albrecht, Chris Karg, Claudia Winklmayr, Vanessa Guarino
maintainer = Jannik Franzen, Jan Philipp Albrecht, Chris Karg, Claudia Winklmayr, Vanessa Guarino
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = blender, rendering, staning, tissue, cells
project_urls =
    Source=https://github.com/Kainmueller-Lab/rendered_HE
    Tracker=https://github.com/Kainmueller-Lab/rendered_HE/issues

[options]
package_dir =
    =src
include_package_data=True
packages = find_namespace:

python_requires = ~=3.10
install_requires =
    bpy~=4.0.0
    mathutils==3.3.0

[options.packages.find]
where = src

[options.package_data]
YML = src/*.yml
CSV = src/*.csv
JSON = src/*.json

[options.entry_points]
console_scripts =
    rHEnder=rHEnder.__main__:main

[flake8]
max-line-length = 120
